# AQA-Playwright

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .roomodes  COMMENT_VOICE.md  LEARNED_LESSONS.md  PROJECT_STATE.md  README.md  claude.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.claude/agents/: builder-auditor.md  planner.md
.claude/skills/aqa-api-testing/: SKILL.md
.claude/skills/aqa-bug-report/: SKILL.md
.claude/skills/aqa-db-testing/: SKILL.md
.claude/skills/aqa-ui-testing/: SKILL.md
.github/workflows/: tests.yml
pages/: base_page.py  checkboxes_page.py  dropdown_page.py  inputs_page.py  login_page.py  register_page.py
reference_vault/expandtesting/: checkboxes.html  dropdown.html  inputs.html  login.html  notes_app.html  register.html
scripts/: capture_notes_snapshot.py
tests/: conftest.py  test_authentication.py  test_db_bugs.py  test_network_interception.py  test_register.py  test_ui_components.py
tests/api/: conftest.py  test_cars.py  test_currency.py  test_geo.py  test_health_check.py  test_math.py  test_phone.py  test_utility.py
utils/: auth_helper.py  config_manager.py
